--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,18 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "CommonJS",
-    "outDir": "./dist",
-    "rootDir": "./src",
-  }
+    "target": "ES6",                          // Define o alvo como ES6
+    "module": "ES6",                          // Usa módulos ES6
+    "moduleResolution": "node",               // Resolve módulos como o Node.js
+    "outDir": "./dist",                       // Diretório de saída para os arquivos compilados
+    "rootDir": "./src",                       // Diretório raiz dos arquivos de entrada
+    "strict": true,                           // Habilita verificações estritas
+    "esModuleInterop": true,                  // Habilita interoperabilidade com módulos ES6
+    "forceConsistentCasingInFileNames": true  // Força consistência de maiúsculas e minúsculas nos nomes dos arquivos
+  },
+  "include": [
+    "./src/**/*.ts"                           // Inclui todos os arquivos TypeScript no diretório src
+  ],
+  "exclude": [
+    "node_modules"                            // Exclui o diretório node_modules
+  ]
 }
